--- a/vagrant/single-node-demo/Vagrantfile
+++ b/vagrant/single-node-demo/Vagrantfile
@@ -14,6 +14,14 @@ unless ENV['DATASTAX_USER'] &&
     exit
 end
 
+def gui_enabled?
+  !ENV.fetch('GUI', '').empty?
+end
+
+unless ENV['AWS_AZ']
+    ENV['AWS_AZ'] = "us-east-1a"
+end
+
 # Vagrantfile API/syntax version. Don't touch unless you know what you're doing!
 VAGRANTFILE_API_VERSION = "2"
 
@@ -46,6 +54,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         aws.access_key_id = ENV['AWS_ACCESS_KEY']
         aws.secret_access_key = ENV['AWS_SECRET_KEY']
         aws.region = "us-east-1"
+        aws.availability_zone = ENV['AWS_AZ']
         aws.keypair_name = "joaquin.rightscale.sales"
         override.ssh.private_key_path = "~/.ssh/joaquin.rightscale.sales.key"
 
@@ -54,7 +63,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
             region.ami = "ami-d0ba0cb8"
         end
 
-        aws.instance_type = "m3.medium"
+        aws.instance_type = "m3.large"
         aws.security_groups = ["demos-webgui-launcher", "dse", "demos-webapp"]
 
         require 'time'
