--- a/vagrant/single-node-demo/Vagrantfile
+++ b/vagrant/single-node-demo/Vagrantfile
@@ -22,13 +22,17 @@ unless ENV['AWS_AZ']
     ENV['AWS_AZ'] = "us-east-1a"
 end
 
+unless ENV['DEMOS_WEB_GUI']
+    ENV['DEMOS_WEB_GUI'] = "../.."
+end
+
 # Vagrantfile API/syntax version. Don't touch unless you know what you're doing!
 VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     config.vm.box = "ubuntu/trusty64"
     config.vm.synced_folder '.', '/vagrant', disabled: true
-    config.vm.synced_folder "../..",
+    config.vm.synced_folder ENV['DEMOS_WEB_GUI'],
                             "/home/vagrant/webapps/demos-web-gui",
                             create: true
 
@@ -41,7 +45,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     config.vm.provider :aws do |aws, override|
         override.vm.box = "aws-dummy"
         override.ssh.username = "ubuntu"
-        override.vm.synced_folder "../..",
+        override.vm.synced_folder ENV['DEMOS_WEB_GUI'],
                                   "/home/ubuntu/webapps/demos-web-gui",
                                   type: "rsync"
 
