--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,9 @@ vagrant*.deb
 set_credentials.sh
 launch.log
 launched-clusters
+web-gui.py.log
+web-gui.cfg
+bootstrap/
+bootstrapvalidator/
+jquery/
 
