--- a/vagrant/web-gui/Vagrantfile
+++ b/vagrant/web-gui/Vagrantfile
@@ -18,7 +18,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     config.vm.synced_folder '.', '/vagrant', disabled: true
     config.vm.synced_folder "../..",
                             "/home/vagrant/webapps/demos-web-gui",
-                            create: true
+                            create: true,
+                            rsync__exclude: ["launched-clusters/",
+                                             "flask/web-gui.py.log"]
 
     config.vm.provider "virtualbox" do |vb|
         vb.memory = 1024
@@ -31,7 +33,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         override.ssh.username = "ubuntu"
         override.vm.synced_folder "../..",
                                   "/home/ubuntu/webapps/demos-web-gui",
-                                  type: "rsync"
+                                  type: "rsync",
+                                  rsync__exclude: ["launched-clusters/",
+                                                   "flask/web-gui.py.log"]
 
         aws.access_key_id = ENV['AWS_ACCESS_KEY']
         aws.secret_access_key = ENV['AWS_SECRET_KEY']
