Add termination confirmation

--- a/flask/bower.json
+++ b/flask/bower.json
@@ -15,6 +15,7 @@
     ],
     "dependencies": {
         "bootstrap": "~3.2.0",
+        "bootstrap-confirmation": "tavicu/bootstrap-confirmation",
         "bootstrapvalidator": "~0.5.2",
         "jquery": "~2.1.1"
     }
