--- a/vagrant/single-node-demo/Vagrantfile
+++ b/vagrant/single-node-demo/Vagrantfile
@@ -96,10 +96,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     config.vm.provision :shell, path: "bootstrap.sh", privileged: false
     config.vm.provision :shell, path: "install-docker.sh", privileged: true
     config.vm.provision :shell,
-                        inline: "AWS_ACCESS_KEY=" + ENV['AWS_ACCESS_KEY'] +
-                                " AWS_SECRET_KEY=" + ENV['AWS_SECRET_KEY'] +
-                                " sudo webapps/demos-web-gui/vagrant/single-node-demo/launch_demo --demo " +
-                                ENV['DEMO'],
+                        inline: "sudo webapps/demos-web-gui/vagrant/single-node-demo/launch_demo" +
+                                " --demo " + ENV['DEMO'] +
+                                " --aws-access-key " + ENV['AWS_ACCESS_KEY'] +
+                                " --aws-secret-key " + ENV['AWS_SECRET_KEY'],
                         privileged: false
 
     # public facing ports
