--- a/vagrant/single-node-demo/Vagrantfile
+++ b/vagrant/single-node-demo/Vagrantfile
@@ -85,8 +85,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
             'name' => ENV['DEMO'],
             'provisioner' => 'demos-web-gui-launcher',
             'email' => ENV['USER_EMAIL'],
-            'launch_time' => Time.now.httpdate,
-            'unix_launch_time' => Time.now.to_i,
+            'launch_time' => Time.now.to_i,
             'ttl' => ENV['TTL'],
             'app_port' => ENV['PORT'],
             'status' => 'Initializing...',
