--- a/vagrant/keys/config
+++ b/vagrant/keys/config
@@ -1,7 +1,7 @@
-Host demos-web-gui
+Host demo-portal
     HostName github.com
     User git
-    IdentityFile ~/.ssh/demos-web-gui.key
+    IdentityFile ~/.ssh/demo-portal.key
 
 Host datastax-dockerfiles
     HostName github.com
