--- a/vagrant/multi-node-demo/Vagrantfile
+++ b/vagrant/multi-node-demo/Vagrantfile
@@ -53,7 +53,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     config.vm.box = 'ubuntu/trusty64'
     config.vm.synced_folder '.', '/vagrant', disabled: true
     config.vm.synced_folder ENV['DEMOS_WEB_GUI'],
-                            '/home/vagrant/webapps/demos-web-gui',
+                            '/home/vagrant/webapps/demo-portal',
                             create: true
 
     config.vm.provider 'virtualbox' do |vb|
@@ -67,7 +67,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         override.vm.box = 'aws-dummy'
         override.ssh.username = 'ubuntu'
         override.vm.synced_folder ENV['DEMOS_WEB_GUI'],
-                                  '/home/ubuntu/webapps/demos-web-gui',
+                                  '/home/ubuntu/webapps/demo-portal',
                                   type: 'rsync'
 
         aws.access_key_id = ENV['AWS_ACCESS_KEY']
@@ -83,11 +83,11 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         end
 
         aws.instance_type = 'm1.large'
-        aws.security_groups = ['demos-webgui-launcher', 'dse', 'demos-webapp']
+        aws.security_groups = ['demo-portal-launcher', 'dse', 'demos-webapp']
 
         aws.tags = {
             'Name' => ENV['DEMO'],
-            'provisioner' => 'demos-web-gui-launcher',
+            'provisioner' => 'demo-portal-launcher',
             'email' => ENV['USER_EMAIL'],
             'launch_time' => ENV['TIME'],
             'ttl' => ENV['TTL'],
