--- a/set_credentials.sh.template
+++ b/set_credentials.sh.template
@@ -1,9 +1,8 @@
 export DATASTAX_USER=
 export DATASTAX_PASS=
 
-export AWS_ACCESS_KEY=
-export AWS_SECRET_KEY=
+export DEMO_AWS_ACCESS_KEY=
+export DEMO_AWS_SECRET_KEY=
 
-export GCE_USER=
-export GCE_PASS=
-
+export DEMO_GCE_USER=
+export DEMO_GCE_PASS=
