--- a/vagrant/demo-portal/Vagrantfile
+++ b/vagrant/demo-portal/Vagrantfile
@@ -79,6 +79,7 @@ def provision(config, production, stale)
     end
 
     config.vm.provision :shell, path: 'src/python.sh', privileged: false
+    config.vm.provision :shell, path: 'src/bower.sh', privileged: false
     config.vm.provision :shell, path: 'src/install.sh', privileged: false
     config.vm.provision :shell, path: 'src/vagrant.sh', privileged: false
 
@@ -142,7 +143,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
         # set virtualbox size information
         dev_stale.vm.provider 'virtualbox' do |vb|
-            vb.memory = 1024
+            vb.memory = 2048
             vb.cpus = 2
             vb.name = 'DataStax Demo Portal (dev_stale)'
         end
