--- a/vagrant/demo-portal/Vagrantfile
+++ b/vagrant/demo-portal/Vagrantfile
@@ -38,6 +38,10 @@ if !ENV['DEMO_DEV_STALE_IP']
     ENV['DEMO_DEV_STALE_IP'] = '192.168.133.8'
 end
 
+if !ENV['DEMO_PROD_CASS']
+    ENV['DEMO_PROD_CASS'] = '54.164.166.255'
+end
+
 def check_aws_envars()
     required_envars = ['DEMO_AWS_ACCESS_KEY', 'DEMO_AWS_SECRET_KEY',
                        'DEMO_KEYPAIR_NAME', 'DEMO_KEYPAIR_LOCATION',
@@ -76,11 +80,16 @@ def provision(config, production, stale)
                                    destination: '/portal/demo-portal/flask2.0/DemoPortalFlask/application.cfg'
         config.vm.provision :file, source: '../keys',
                                    destination: '/portal/demo-portal/vagrant/'
+    else
+        config.vm.synced_folder '../..', '/portal/demo-portal', create: true
+        config.vm.synced_folder '../cache', '/cache', create: true
     end
 
     config.vm.provision :shell, path: 'src/python.sh', privileged: false
     config.vm.provision :shell, path: 'src/bower.sh', privileged: false
-    config.vm.provision :shell, path: 'src/install.sh', privileged: false
+    config.vm.provision :shell, path: 'src/install.sh',
+                                privileged: false,
+                                args: [ENV['DEMO_PROD_CASS']]
     config.vm.provision :shell, path: 'src/vagrant.sh', privileged: false
 
     if !production
@@ -117,15 +126,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
             vb.name = 'DataStax Demo Portal (dev)'
         end
 
-        # use synced folders for dev vm setup
-        dev.vm.synced_folder '../..',
-                             '/portal/demo-portal',
-                             create: true
-        dev.vm.synced_folder '../cache',
-                             '/cache',
-                             create: true
-
-        provision(dev, false, false)
+        provision(config: dev, production: false, stale: false)
     end
 
     config.vm.define 'dev-stale', primary: true do |dev_stale|
@@ -148,7 +149,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
             vb.name = 'DataStax Demo Portal (dev_stale)'
         end
 
-        provision(dev_stale, false, true)
+        provision(config: dev_stale, production: false, stale: true)
     end
 
     # configure aws machines
@@ -189,6 +190,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
                 'Email' => ENV['DEMO_EMAIL']
             }
         end
+
+        provision(config: production_A, production: true, stale: true)
     end
 
     config.vm.define 'production-B', autostart: false do |production_B|
@@ -203,6 +206,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
                 'Email' => ENV['DEMO_EMAIL']
             }
         end
+
+        provision(config: production_B, production: true, stale: true)
     end
 
     config.vm.define 'staging', autostart: false do |staging|
@@ -217,6 +222,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
                 'Email' => ENV['DEMO_EMAIL']
             }
         end
+
+        provision(config: staging, production: true, stale: true)
     end
 
     config.vm.define 'build', autostart: false do |build|
@@ -230,6 +237,35 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
                 'Owner' => ENV['DEMO_USER'],
                 'Email' => ENV['DEMO_EMAIL']
             }
+        end
+
+        provision(config: build, production: true, stale: true)
+    end
+
+    config.vm.define 'dse', autostart: false do |dse|
+        dse.vm.provider 'aws' do |aws|
+            check_aws_envars()
+
+            # setup AWS Tags
+            aws.tags = {
+                'Name' => 'Demos Portal Cassandra Build Test',
+                'Provisioner' => 'demo-portal-launcher',
+                'Owner' => ENV['DEMO_USER'],
+                'Email' => ENV['DEMO_EMAIL']
+            }
+
+            aws.security_groups = ['demo-portal-dse']
+        end
+
+        config.vm.provision 'shell', inline: 'sudo apt-get install -y ntp'
+        config.vm.provision :file, source: 'files/DSE-README', destination: 'DSE-README'
+
+        coffice.vm.provision 'docker' do |d|
+            d.run 'datastaxdemos/datastax-enterprise',
+                cmd: 'start-dse --cluster-name "DataStax Services Cluster"',
+                args: '--volume /mnt/cassandra:/var/lib/cassandra'\
+                      '--volume /mnt/logs:/var/log/cassandra'\
+                      '--net host'
         end
     end
 
