--- a/vagrant/demo-portal/Vagrantfile
+++ b/vagrant/demo-portal/Vagrantfile
@@ -18,7 +18,7 @@ ami_list = {
 
 # https://vagrantcloud.com/ubuntu
 vmbox = 'ubuntu/trusty64'
-ssh_username = 'root'
+ssh_username = 'ubuntu'
 
 # Do not override until DEMO-75
 # if !ENV['DEMO_AWS_REGION']
