--- a/set_credentials.sh.template
+++ b/set_credentials.sh.template
@@ -1,8 +1,17 @@
-export DATASTAX_USER=
-export DATASTAX_PASS=
+#!/bin/sh
+
+#export DATASTAX_USER=
+#export DATASTAX_PASS=
+
+export DEMO_USER=
+export DEMO_EMAIL=
 
 export DEMO_AWS_ACCESS_KEY=
 export DEMO_AWS_SECRET_KEY=
 
+export DEMO_KEYPAIR_NAME=
+export DEMO_KEYPAIR_LOCATION=
+
 export DEMO_GCE_USER=
 export DEMO_GCE_PASS=
+
